learning_programs/i2c-display-example/build/log/idf_py_stderr_output_19573
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c: In function 'app_main':
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:35:18: error: initialization of 'char *' from 'char' makes pointer from integer without a cast [-Wint-conversion]
   35 |     char * ptr = message;
      |                  ^~~~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:37:37: error: pointer targets in passing argument 2 of 'i2c_master_transmit' differ in signedness [-Werror=pointer-sign]
   37 |     i2c_master_transmit(dev_handle, ptr, 1, -1 );
      |                                     ^~~
      |                                     |
      |                                     char *
In file included from /home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:4:
/home/danny/esp-idf/components/esp_driver_i2c/include/driver/i2c_master.h:135:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  135 | esp_err_t i2c_master_transmit(i2c_master_dev_handle_t i2c_dev, const uint8_t *write_buffer, size_t write_size, int xfer_timeout_ms);
      |                                                                ~~~~~~~~~~~~~~~^~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/i2c-display-example.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
